Fixed toggle overlap on medium/small bp

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
@@ -113,10 +113,10 @@
 		color: $header-font-color;
 	}
 	@include bp(large-up) {
-		margin-bottom: 24px;
 		width: 58%;
 	}
 	@include bp(xtra-large) {
+		margin-bottom: 24px;
 		width: 65%;
 	}
 }
@@ -287,7 +287,7 @@
 	}
 
 	/** CTHP new toggle styles **/
-	@include bp(medium-up) {
+    @media only screen and (min-width: 700px) {
 		position: absolute;
 		margin: -55px 0px 0px;
 		right: 16px; 
@@ -308,7 +308,7 @@
 		top: 20px;
 	}
 
-	@include bp(small) {
+    @media only screen and (max-width: 699px) {
 		background-color: white;
 		display: inline-block;
 		float: none;
